Add contact form

--- a/index.html
+++ b/index.html
@@ -181,6 +181,14 @@
             </blockquote>
             <small><em>Nadine</em></small>
           </div>
+
+          <div class="item">
+          <div class="slide6"></div>
+            <blockquote>
+              <p>love love love these cupcakes . by far the best I have had in toronto. you gotta try em.</p>
+            </blockquote>
+            <small><em>Kyla</em></small>
+          </div>
         </div> <!-- carousel-inner -->
 
         <a class="left carousel-control" href="#theCarousel" data-slide="prev">
@@ -189,8 +197,128 @@
         <a class="right carousel-control" href="#theCarousel" data-slide="next">
           <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
-      </div>
-    </section> <!-- theCarousel -->
+      </div> <!-- theCarousel -->
+    </section>
+
+    <section class="contact">
+      <div class="contact-box">
+        <div class="contact-info-box">
+          <div class="contact-info">
+            <div class="contact-methods">
+              <p>Email</p>
+              <p>info@cakes.com</p>
+            </div>
+            <div class="contact-methods">
+              <p>Phone</p>
+              <p>(416)555-5555)</p>
+            </div>
+            <div class="contact-methods">
+              <p>Storefront</p>
+              <p>82 Yonge Street, Toronto</p>
+            </div>
+            <div class="contact-methods">
+              <p>Hours</p>
+              <p>by appointment, Tuesday through Saturday</p>
+            </div>
+          </div> <!-- contact-info -->
+          <div class="contact-image">
+            <img src="public/assets/images/rustic-wedding-cake.jpg" width="363px" height="380px">
+          </div>
+        </div> <!-- contact-info-box -->
+        <div class="contact-form">
+          <form class="form-horizontal" action="/examples/actions/confirmation.php" method="post">
+        <div class="form-group">
+            <label class="control-label col-xs-3" for="firstName">First Name:</label>
+            <div class="col-xs-9">
+                <input type="text" class="form-control" id="firstName" placeholder="First Name" required>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-xs-3" for="lastName">Last Name:</label>
+            <div class="col-xs-9">
+                <input type="text" class="form-control" id="lastName" placeholder="Last Name" required>
+            </div>
+        </div>
+		<div class="form-group">
+            <label class="control-label col-xs-3" for="inputEmail">Email Address:</label>
+            <div class="col-xs-9">
+                <input type="email" class="form-control" id="inputEmail" placeholder="Email Address" required>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-xs-3" for="phoneNumber">Phone Number:</label>
+            <div class="col-xs-9">
+                <input type="tel" class="form-control" id="phoneNumber" placeholder="Phone Number" required>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-xs-3">Date of Birth:</label>
+            <div class="col-xs-3">
+                <select class="form-control">
+                    <option>Date</option>
+                </select>
+            </div>
+            <div class="col-xs-3">
+                <select class="form-control">
+                    <option>Month</option>
+                </select>
+            </div>
+            <div class="col-xs-3">
+                <select class="form-control">
+                    <option>Year</option>
+                </select>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-xs-3" for="postalAddress">Postal Address:</label>
+            <div class="col-xs-9">
+                <textarea rows="3" class="form-control" id="postalAddress" placeholder="Postal Address" required></textarea>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-xs-3" for="ZipCode">Zip Code:</label>
+            <div class="col-xs-9">
+                <input type="text" class="form-control" id="ZipCode" placeholder="Zip Code" required>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-xs-3">Gender:</label>
+            <div class="col-xs-2">
+                <label class="radio-inline">
+                    <input type="radio" name="genderRadios" value="male" required> Male
+                </label>
+            </div>
+            <div class="col-xs-2">
+                <label class="radio-inline">
+                    <input type="radio" name="genderRadios" value="female" required> Female
+                </label>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-xs-offset-3 col-xs-9">
+                <label class="checkbox-inline">
+                    <input type="checkbox" value="news"> Send me latest news and updates.
+                </label>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-xs-offset-3 col-xs-9">
+                <label class="checkbox-inline">
+                    <input type="checkbox" value="agree">  I agree to the <a href="#">Terms and Conditions</a>.
+                </label>
+            </div>
+        </div>
+        <br>
+        <div class="form-group">
+            <div class="col-xs-offset-3 col-xs-9">
+                <input type="submit" class="btn btn-primary" value="Submit">
+                <input type="reset" class="btn btn-default" value="Reset">
+            </div>
+        </div>
+    </form>
+        </div> <!-- contact-form -->
+      </div> <!-- contact-box -->
+    </section>
 
     <footer>
 
