--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -48,17 +49,18 @@
 
           <div class="collapse navbar-collapse" id="navbar-collapse-main">
             <ul class="nav navbar-nav navbar-right">
-              <li id="home-button" class="nav-link"><a href="#">Our Story</a></li>
-              <li id="quotes-button" class="nav-link"><a href="#">Gallery</a></li>
-              <li id="timeline-button" class="nav-link"><a href="#">Testimonials</a></li>
-              <li id="resources-button" class="nav-link"><a href="#">faq</a></li>
-              <li id="resources-button" class="nav-link"><a href="#">Contact Us</a></li>
+              <li id="home-button"><a href="#about-us" class="nav-link">Our Story</a></li>
+              <li id="quotes-button" ><a href="#about-us" class="nav-link">Gallery</a></li>
+              <li id="timeline-button"><a href="#about-us" class="nav-link">Testimonials</a></li>
+              <li id="resources-button"><a href="#about-us" class="nav-link">faq</a></li>
+              <li id="resources-button"><a href="#about-us" class="nav-link">Contact Us</a></li>
             </ul>
           </div>
         </div>
       </nav>
   </header>
 
+  <div id="par">
     <div class="banner-image-div">
       <img class="banner-image" src="public/assets/images/banner-image.jpg" width="900px" height="550px">
     </div>
@@ -73,6 +75,7 @@
       </div>
     </div>
     </main>
+  </div>
 
     <section class="background-image-cake" id="background1">
       <img src="public/assets/images/baking-background3.jpg" width="100%">
@@ -99,11 +102,11 @@
       </div>
     </section>
 
-    <section class="background2">
+    <section class="background-image-cake" id="background2">
       <img src="public/assets/images/baking-background4.jpg" width="100%">
     </section>
 
-    <section class="gallery">
+    <section class="gallery" id="gallery-scroll">
       <div class="gallery-div">
         <h1>Gallery</h1>
 
@@ -136,6 +139,10 @@
           </ul>
         </div>
       </div>
+    </section>
+
+    <section class="background-image-cake" id="background3">
+      <img src="public/assets/images/baking-background5.jpg" width="100%">
     </section>
 
     <section class="testimonials">
@@ -231,7 +238,7 @@
           </div>
         </div> <!-- contact-info-box -->
         <div class="contact-form">
-          <form class="form-horizontal" action="/examples/actions/confirmation.php" method="post">
+          <form class="form-horizontal" id="form" action="https://www.freecodecamp.com/email-submit">
             <div class="form-group">
               <!-- <label class="control-label col-xs-3" for="firstName">First Name:</label> -->
             <p> First Name* </p>
@@ -248,10 +255,11 @@
             </div>
           </div>
 		      <div class="form-group">
-            <!-- <label class="control-label col-xs-3" for="inputEmail">Email Address:</label> -->
+            <!-- <label class="control-label col-xs-3" for="email">Email Address:</label> -->
             <p> Email Address* </p>
             <div class="col-xs-9">
-                <input type="email" class="form-control" id="inputEmail" placeholder="Email Address" required>
+                <!-- <input type="email" id="email" placeholder="Enter your email here" target="_blank" name="email" required> -->
+                <input type="email" name="email" class="form-control" id="email" placeholder="Email Address" required>
             </div>
           </div>
           <div class="form-group">
@@ -297,7 +305,7 @@
         <br>
         <div class="form-group">
             <div class="col-xs-offset-3 col-xs-9">
-                <input type="submit" class="btn btn-primary" value="Submit">
+                <input type="submit" class="btn btn-primary" id="submit" value="Submit">
                 <input type="reset" class="btn btn-default" value="Reset">
             </div>
         </div>
