Revise parallax effect

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <img src="public/assets/images/baking-background5.jpg" width="100%">
     </section>
 
-    <section class="testimonials">
+    <section class="testimonials" id="testimonials-scroll">
       <div id="theCarousel" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#theCarousel" data-slide-to="0" class="active"></li>
@@ -212,7 +212,7 @@
       </div> <!-- theCarousel -->
     </section>
 
-    <section class="contact">
+    <section class="contact" id="contact-scroll">
       <div class="contact-box">
         <div class="contact-info-box">
           <div class="contact-info">
